# thala2

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
example/: 20220417_222209.py  megido.py
tests/: xml2mp4.py
tests/files/: subtitles.xml
thala2/: __init__.py  audio.py  util.py  video.py
thala2/bbox/: __init__.py  boundingbox.py
thala2/tts/: __init__.py  google.py  tts.py  voice_vox.py
