[metadata]
name = thala2
version = attr: thala2.__version__
url = https://github.com/mkszk/thala2
author = mkszk
author_email = masaru.k.suzuki@gmail.com
license_files = LICENSE
description = thala2: Personal Python package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
  gTTS
  moviepy
  numpy
  opencv-python
  Pillow
  pydub
  regex
python_requires = >=3.9
packages = find:

